--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+@layer base {
+  :root {
+      --border: "#000000", /* black */
+      --primary-fill: "#002147", /* Oxford Blue */
+      --primary-text: "#FFFFFF", /* White */
+      --primary-text-muted: "#E5E5E5", /* Gray */
+      --secondary-fill: "#FCA311", /* Web Orange */
+      --secondary-text: "#002147", /* Oxford Blue */
+    },
+  .easter-colors {
+
+  }
+}
+
+/* html,
 body {
   @apply text-white bg-orangeweboxfordblue-background;
-}
+} */
+
+/* I think this application is discouraged in favor of applying this to the respective layer */
+
+/* In reference to apply from the docs "Honestly though the best solution is to just not do weird stuff like this at all. Use Tailwind’s utilities directly in your markup the way they are intended to be used, and don’t abuse the @apply feature to do things like this and you will have a much better experience. */
