working initial fix with working alternate color for navbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,17 +4,18 @@
 
 @layer base {
   :root {
-      --border: "#000000", /* black */
-      --primary-text: "#002147", /* Oxford Blue */
-      --primary-fill: "#FFFFFF", /* White */
-      --primary-text-muted: "#E5E5E5", /* Gray */
-      --secondary-fill: "#FCA311", /* Web Orange */
-      --secondary-text: "#002147", /* Oxford Blue */
-      --contrast-fill: "#002147", /* Oxford Blue */
-      --contrast-text: #FFFFFF /* White */
-    },
-  .easter-colors {
-
+      --borderhard: 255,192,203; /* black */
+      --primary-text: 0, 33, 71; /* Oxford Blue */
+      --primary-fill: 255, 255, 255; /* White */
+      --primary-text-muted: "#E5E5E5"; /* Gray */
+      --secondary-fill: 252, 163, 17; /* Web Orange */
+      --secondary-text: "#002147"; /* Oxford Blue */
+      --contrast-fill: "#002147"; /* Oxford Blue */
+      --contrast-text: #FFFFFF; /* White */
+      --muted-fill: "#e5e5e5" /* Gray */
+    }
+  .theme-2 {
+    --test-red: #FF0000;
   }
 }
 
