--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  --borderhard: 255,192,203; /* black */
+  --primary-text: 0, 33, 71; /* Oxford Blue */
+  --primary-fill: 255, 255, 255; /* White */
+  --primary-text-muted: "#E5E5E5"; /* Gray */
+  --secondary-fill: 252, 163, 17; /* Web Orange */
+  --secondary-text: "#002147"; /* Oxford Blue */
+  --contrast-fill: "#002147"; /* Oxford Blue */
+  --contrast-text: #FFFFFF; /* White */
+  --muted-fill: "#e5e5e5"; /* Gray */
+  --bright-red: #FF0000;
+}
+
 @layer base {
   :root {
       --borderhard: 255,192,203; /* black */
@@ -12,10 +25,10 @@
       --secondary-text: "#002147"; /* Oxford Blue */
       --contrast-fill: "#002147"; /* Oxford Blue */
       --contrast-text: #FFFFFF; /* White */
-      --muted-fill: "#e5e5e5" /* Gray */
+      --muted-fill: "#e5e5e5"; /* Gray */
+      --bright-red: #FF0000;
     }
   .theme-2 {
-    --test-red: #FF0000;
   }
 }
 
