--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,16 +5,16 @@
 :root {
   --borderhard: #000000; /* black */
   --primary-text: #002147; /* Oxford Blue */
-  --primary-fill: #FFFFFF; /* White */
+  --primary-fill: #ffffff; /* White */
   --primary-text-muted: #8a6f6f; /* Gray */
-  --secondary-fill: #002147;/* Oxford Blue */
-  --secondary-text: #FF8C00; /* Web Orange */ 
-  --contrast-fill: #FF8C00; /* Oxford Blue */
+  --secondary-fill: #002147; /* Oxford Blue */
+  --secondary-text: #ff8c00; /* Web Orange */
+  --contrast-fill: #ff8c00; /* Oxford Blue */
   --contrast-text: #002147; /* White */
   --muted-fill: #542d2d; /* Gray */
-  --bright-special: #FF0000;
+  --bright-special: #ff0000;
   --primary-border: #002147;
-  --secondary-border: #FF8C00;
+  --secondary-border: #ff8c00;
   --muted-border: #8a6f6f;
 }
 
@@ -23,7 +23,7 @@
   --primary-text: #533c3f; /* Brown */
   --primary-fill: #c1fffdab; /* Celeste */
   --primary-text-muted: #935fa7; /* Gray */
-  --secondary-fill: #FACBD6; /* Web Orange */
+  --secondary-fill: #facbd6; /* Web Orange */
   --secondary-text: #1c0055; /*  */
   --contrast-fill: #554489; /*  */
   --contrast-text: #c1fffd; /* White */
@@ -40,7 +40,7 @@
 
 @layer base {
   :root {
-    }
+  }
   .theme-2 {
   }
 }
